update: Disabled the frontend connection, will be done later on